Add hopefully the last collector